[gd_scene load_steps=15 format=3 uid="uid://b3d7gawmwn128"]

[ext_resource type="PackedScene" uid="uid://006i5i72bun1" path="res://Scenes/main_level.tscn" id="1_bu0eb"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_ryie0"]
[ext_resource type="Script" path="res://Scripts/MusicManager.gd" id="2_w01u1"]
[ext_resource type="PackedScene" uid="uid://ch4wglb7cfc7" path="res://Scenes/Player.tscn" id="3_nfab3"]
[ext_resource type="PackedScene" uid="uid://cjimp4jwk24co" path="res://Scenes/ui_canvas.tscn" id="4_0rokx"]
[ext_resource type="PackedScene" uid="uid://c1q3hty38mbi2" path="res://Scenes/Triggers/win_area.tscn" id="4_giia6"]
[ext_resource type="PackedScene" uid="uid://ovd4lsqu07bh" path="res://Scenes/chain.tscn" id="4_pdtj6"]
[ext_resource type="PackedScene" uid="uid://uj8cf506ml5v" path="res://Scenes/chain_base.tscn" id="5_33amq"]
[ext_resource type="Script" path="res://Scripts/MainCamera.gd" id="5_kpbsb"]
[ext_resource type="PackedScene" uid="uid://dpg5ed8ojadqn" path="res://Scenes/transition_shader.tscn" id="6_x3bfk"]
[ext_resource type="Shader" path="res://Materials/SetColorPalette.gdshader" id="7_4qc8k"]
[ext_resource type="Texture2D" uid="uid://b8ckqp3m8in1g" path="res://Sprites/palettes_flip.png" id="8_6gf24"]
[ext_resource type="Script" path="res://Scripts/Shader_Palette.gd" id="9_btm2a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3eom"]
shader = ExtResource("7_4qc8k")
shader_parameter/palette_index = 0.0
shader_parameter/palette = ExtResource("8_6gf24")

[node name="Main" type="Node"]

[node name="GameManager" type="Node" parent="."]
process_mode = 3
script = ExtResource("1_ryie0")

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("2_w01u1")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="MusicManager"]
bus = &"Music"

[node name="MainLevel" parent="." instance=ExtResource("1_bu0eb")]

[node name="WinArea" parent="." instance=ExtResource("4_giia6")]
position = Vector2(80, 83)

[node name="Chain" parent="." instance=ExtResource("4_pdtj6")]
base_path = NodePath("../ChainBase")
player_path = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("3_nfab3")]
position = Vector2(80, 11.2)

[node name="ChainBase" parent="." instance=ExtResource("5_33amq")]
position = Vector2(80, 8)
player_path = NodePath("../Player")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)
script = ExtResource("5_kpbsb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UICanvas" parent="CanvasLayer" instance=ExtResource("4_0rokx")]
visible = false

[node name="TransitionShader" parent="CanvasLayer" instance=ExtResource("6_x3bfk")]

[node name="PaletteShader" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_b3eom")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_btm2a")

[connection signal="lose_process" from="GameManager" to="Player" method="disable_input"]
[connection signal="lose_process" from="GameManager" to="CanvasLayer/UICanvas" method="hide_displays"]
[connection signal="pause" from="GameManager" to="CanvasLayer/UICanvas" method="on_pause"]
[connection signal="reset_process" from="GameManager" to="Player" method="reset"]
[connection signal="reset_process" from="GameManager" to="Camera2D" method="reset_camera"]
[connection signal="start_process" from="GameManager" to="Player" method="enable_input"]
[connection signal="unpause" from="GameManager" to="CanvasLayer/UICanvas" method="on_unpause"]
[connection signal="update_camera" from="GameManager" to="Camera2D" method="update_camera_pos"]
[connection signal="win_process" from="GameManager" to="MainLevel" method="on_win"]
[connection signal="win_process" from="GameManager" to="Player" method="disable_input"]
[connection signal="win_process" from="GameManager" to="CanvasLayer/UICanvas" method="hide_displays"]
[connection signal="screen_wipe" from="MainLevel" to="CanvasLayer/TransitionShader" method="transition"]
[connection signal="update_camera" from="MainLevel" to="Camera2D" method="update_camera_pos"]
[connection signal="win_signal" from="WinArea" to="GameManager" method="win"]
[connection signal="change_palette" from="Player" to="CanvasLayer/PaletteShader" method="change_palette"]
[connection signal="player_lose" from="Player" to="GameManager" method="lose"]
[connection signal="set_display" from="Player" to="CanvasLayer/UICanvas" method="set_displaying"]
[connection signal="swap_display" from="Player" to="CanvasLayer/UICanvas" method="swap_data_displays"]
[connection signal="update_coins" from="Player" to="CanvasLayer/UICanvas" method="update_coins"]
[connection signal="update_health" from="Player" to="CanvasLayer/UICanvas" method="update_health"]
